// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/collapse/demo/accordion.md correctly 1`] = `
<div
  class="ant-collapse"
  role="tablist"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="tab"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/basic.md correctly 1`] = `
<div
  class="ant-collapse"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p>
          
  A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.

        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-item-disabled"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="-1"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/borderless.md correctly 1`] = `
<div
  class="ant-collapse ant-collapse-borderless"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p
          style="padding-left:24px"
        >
          A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.
        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/custom.md correctly 1`] = `
<div
  class="ant-collapse ant-collapse-borderless"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
    style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: caret-right"
        class="anticon anticon-caret-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          width="1em"
        >
          <use
            href="#caret-right"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p>
          
  A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.

        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item"
    style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: caret-right"
        class="anticon anticon-caret-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-right"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
    style="background:#f7f7f7;border-radius:4px;margin-bottom:24px;border:0;overflow:hidden"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: caret-right"
        class="anticon anticon-caret-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#caret-right"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/mix.md correctly 1`] = `
<div
  class="ant-collapse"
>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 1
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 2
    </div>
  </div>
  <div
    class="ant-collapse-item"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header 3
    </div>
  </div>
</div>
`;

exports[`renders ./components/collapse/demo/noarrow.md correctly 1`] = `
<div
  class="ant-collapse"
>
  <div
    class="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded="true"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      <i
        aria-label="icon: right"
        class="anticon anticon-right ant-collapse-arrow"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          style="-ms-transform:rotate(90deg);transform:rotate(90deg)"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
      This is panel header with arrow icon
    </div>
    <div
      class="ant-collapse-content ant-collapse-content-active"
    >
      <div
        class="ant-collapse-content-box"
      >
        <p>
          
  A dog is a type of domesticated animal.
  Known for its loyalty and faithfulness,
  it can be found as a welcome guest in many households across the world.

        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-collapse-item ant-collapse-no-arrow"
  >
    <div
      aria-expanded="false"
      class="ant-collapse-header"
      role="button"
      tabindex="0"
    >
      This is panel header with no arrow icon
    </div>
  </div>
</div>
`;
